<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.route.airports.AirportPickerActivity"
    tools:showIn="@layout/activity_airport_picker">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            style="@style/AppToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/title_activity_airport_picker" />

    </android.support.design.widget.AppBarLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="77dp"
        android:paddingLeft="4dp"
        android:paddingRight="4dp">

        <LinearLayout
            android:id="@+id/hintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start|center_vertical"
            android:padding="14dp">

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                app:srcCompat="@drawable/ic_search" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:fontFamily="@font/helvetica_neue_light"
                android:padding="5dp"
                android:text="@string/hint_search_airports"
                android:textColor="@color/gray_light"
                android:textSize="28sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|start"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:fontFamily="@font/helvetica_neue_heavy"
                android:inputType="textCapWords"
                android:lines="1"
                android:padding="10dp"
                android:scrollHorizontally="true"
                android:textCursorDrawable="@null"
                android:textSize="26sp" />

            <ImageView
                android:id="@+id/clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="3dp"
                android:scaleType="centerInside"
                android:visibility="gone"
                app:srcCompat="@drawable/ic_close_black_24dp"
                tools:visibility="visible" />
        </LinearLayout>
    </FrameLayout>

    <View style="@style/VerticalSeparator" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="5dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|start"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="20dp"
            app:srcCompat="@drawable/ic_alllocations" />

        <Space
            android:layout_width="10dp"
            android:layout_height="match_parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/helvetica_neue_medium"
            android:padding="0dp"
            android:text="@string/label_all_locations"
            android:textColor="@color/black"
            android:textSize="14sp" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="5dp" />

    <View
        style="@style/VerticalSeparator"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />
</LinearLayout>